--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+* {
+  border: 1px solid red;
+}
 body {
   background: #222;
   font-family:
@@ -11,7 +14,7 @@ body {
   padding: 0;
   margin: 0;
   display: grid;
-  grid-template-columns: repeat(auto-fill, 200px);
+  grid-template-columns: repeat(auto-fit, 200px);
   justify-content: center;
   gap: 2em;
   grid-row-gap: 3em;
